apps/base/beaverhabits/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beaverhabits
  namespace: beaverhabits
  labels:
    app: beaverhabits
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: beaverhabits
  template:
    metadata:
      labels:
        app: beaverhabits
    spec:
      containers:
        - name: beaverhabits
          image: daya0576/beaverhabits:0.9.1
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "1000m"
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: data
              mountPath: /app/.user/
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: beaverhabits-data
