apps/base/beaverhabits/service.yml
apiVersion: v1
kind: Service
metadata:
  name: beaverhabits
  namespace: beaverhabits
spec:
  selector:
    app: beaverhabits
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
