apps/base/beaverhabits/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: beaverhabits
  namespace: beaverhabits
  annotations:
    traefik.ingress.kubernetes.io/headers: |
      browserXssFilter: true
      contentTypeNosniff: true
      forceSTSHeader: true
      stsIncludeSubdomains: true
      stsPreload: true
      stsSeconds: 31536000
      customFrameOptionsValue: "SAMEORIGIN"
      contentSecurityPolicy: "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; connect-src 'self'"
      referrerPolicy: "strict-origin-when-cross-origin"
      permissionsPolicy: "camera=(), microphone=(), geolocation=()"
spec:
  rules:
    - host: "beaverhabits.leotsgo.dev"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: beaverhabits
                port:
                  number: 8080
  tls:
    - hosts:
        - "beaverhabits.leotsgo.dev"
